--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="NomeDoente">João</string>
     <string name="Guardar">Guardar</string>
     <string name="Cancelar">Cancelar</string>
+    <string name="Eliminar">Eliminar</string>
 </resources>
