--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,5 @@
     <string name="eliminar">Eliminar</string>
     <string name="erro_eliminar_consulta">Erro ao Eliminar consulta</string>
     <string name="consulta_eliminado_sucesso">consulta eliminado com sucesso</string>
-    <string name="erro_eliminar_consulta">E</string>
+    <string name="inserir_consulta_label">Inserir data</string>
 </resources>
