EditarMedicosFragment.kt concluida

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,9 @@
     <string name="CartaoCidadao">Cartao cidadao</string>
     <string name="Especialidades">Especialidades</string>
     <string name="inserir_medico_label">Inserir Medicos</string>
+    <string name="nome_obrigatorio">Preencha o nome</string>
+    <string name="cartaoCidadao_obrigatorio">Preencha o Cartao cidadao</string>
+    <string name="especialidade_obrigatoria">Escolha uma especialidade</string>
+    <string name="medico_guardado_sucesso">Medico guardado com sucesso</string>
+    <string name="erro_guardar_medico">Erro ao guardar medico</string>
 </resources>
