--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="medico_guardado_sucesso">Medico guardado com sucesso</string>
     <string name="erro_guardar_medico">Erro ao guardar medico</string>
     <string name="TipoEspecialidades">Tipo de especialidade</string>
+    <string name="eliminarEspecialidade">Eliminar Especialidade</string>
 </resources>
