--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="tipodoenca">Tipo de doenca</string>
     <string name="eliminar_doenca_label">Eliminar doenca</string>
     <string name="Doencas">Doencas</string>
+    <string name="EliminarDoentes">Eliminar Doentes</string>
 </resources>
