--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -27,4 +27,23 @@
     <string name="inserir_consulta_label">Inserir consulta</string>
     <string name="editar_consultas_label">Editar consultas</string>
     <string name="eliminar">Eliminar</string>
+    <string name="eliminarMedico">Eliminar Medico</string>
+    <string name="Nome">Nome</string>
+    <string name="CartaoCidadao">Cartao cidadao</string>
+    <string name="Especialidades">Especialidades</string>
+    <string name="Especialidades">Especialidades</string>
+    <string name="inserir_medico_label">Inserir Medicos</string>
+    <string name="nome_obrigatorio">Preencha o nome</string>
+    <string name="cartaoCidadao_obrigatorio">Preencha o Cartao cidadao</string>
+    <string name="especialidade_obrigatoria">Escolha uma especialidade</string>
+    <string name="medico_guardado_sucesso">Medico guardado com sucesso</string>
+    <string name="erro_guardar_medico">Erro ao guardar medico</string>
+    <string name="TipoEspecialidades">Tipo de especialidade</string>
+    <string name="eliminarEspecialidade">Eliminar especialidade</string>
+    <string name="eliminarEspecialidade">Eliminar especialidade</string>
+    <string name="inserir_tipo_especialidade">inserir tipo especialidades</string>
+    <string name="tipodoenca">Tipo de doenca</string>
+    <string name="eliminar_doenca_label">Eliminar doenca</string>
+    <string name="Doencas">Doencas</string>
+    <string name="EliminarDoentes">Eliminar Doentes</string>
 </resources>
