verificar o tipo inteiro que o professor tem na parte do fun atualizaData(id_string_data: Int)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="eliminar_doenca_label">Eliminar doenca</string>
     <string name="Doencas">Doencas</string>
     <string name="EliminarDoentes">Eliminar Doentes</string>
+    <string name="teste">teste</string>
 </resources>
