--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -44,4 +44,41 @@
     <string name="eliminar_doenca_label">eliminate disease</string>
     <string name="Doencas">Disease</string>
     <string name="EliminarDoentes">Delete patient</string>
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="preencha_Tipo_Doenca">fill the type of disease</string>
+    <string name="Doenca_guardado">Disease saved successfully</string>
+    <string name="Doenca_erro">error saving disease type</string>
+    <string name="Preencha_DataNascimento">fill the date of birth</string>
+    <string name="Escolha_Doenca">choose a disease</string>
+    <string name="Doente_guardado">patient successfully saved</string>
+    <string name="Doente_erro">error saving patient</string>
+    <string name="Preencha_Tipo_Especialidades">fill the specialty type</string>
+    <string name="Especialidade_guardado">Specialty saved successfully</string>
+    <string name="Especialidade_erro">error saving specialty type</string>
+    <string name="Eliminar_Doenca_label">eliminate disease</string>
+    <string name="confirma_eliminar_doenca">Are you sure you want to eliminate disease?</string>
+    <string name="erro_eliminar_doenca">Error eliminating Disease type</string>
+    <string name="doenca_eliminado_sucesso">type of disease successfully eliminated</string>
+    <string name="eliminar_doentes_label">eliminate patient</string>
+    <string name="confirma_eliminar_doente">Are you sure you want to delete the patient?</string>
+    <string name="erro_eliminar_doente">Error when eliminating patient</string>
+    <string name="doente_eliminado_sucesso">patient successfully eliminated</string>
+    <string name="eliminar_especialidade_label">delete specialty</string>
+    <string name="confirma_eliminar_especialidade">Are you sure you want to delete specialty?</string>
+    <string name="erro_eliminar_especialidade">Error deleting Specialty Type</string>
+    <string name="especialidade_eliminado_sucesso">specialty type successfully deleted</string>
+    <string name="eliminar_medico_label">eliminate doctor</string>
+    <string name="confirma_eliminar_medico">Are you sure you want to delete the doctor?</string>
+    <string name="erro_eliminar_medico">Error deleting doctor</string>
+    <string name="medico_eliminado_sucesso">doctor successfully eliminated</string>
+    <string name="alterar_data_label">Change Date</string>
+    <string name="inserir_doencas_label">Insert diseases</string>
+    <string name="alterar_doencas_label">change diseases</string>
+    <string name="inserir_doentes_label">Insert patients</string>
+    <string name="alterar_doentes_label">change patients</string>
+    <string name="inserir_especialidades_label">insert specialties</string>
+    <string name="alterar_especialidades_label">change specialties</string>
+    <string name="inserir_medicos_label">insert doctors</string>
+    <string name="alterar_medicos_label">change doctors</string>
 </resources>
