--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -44,4 +44,41 @@
     <string name="eliminar_doenca_label">Eliminar doenca</string>
     <string name="Doencas">Doencas</string>
     <string name="EliminarDoentes">Eliminar Doentes</string>
+    <string name="first_fragment_label">Primeiro Fragmento</string>
+    <string name="second_fragment_label">Segundo Fragmento</string>
+    <string name="preencha_Tipo_Doenca">preencha o tipo de doenca</string>
+    <string name="Doenca_guardado">Doenca guardado com sucesso</string>
+    <string name="Doenca_erro">erro ao guardar tipo de doenca</string>
+    <string name="Preencha_DataNascimento">preencha a data de nascimento</string>
+    <string name="Escolha_Doenca">Escolha uma doença</string>
+    <string name="Doente_guardado">doente guarado com sucesso</string>
+    <string name="Doente_erro">erro ao guardar doente</string>
+    <string name="Preencha_Tipo_Especialidades">preencha o tipo de especialidade</string>
+    <string name="Especialidade_guardado">Especialidade guardado com sucesso</string>
+    <string name="Especialidade_erro">erro ao guardar tipo de especialidade</string>
+    <string name="Eliminar_Doenca_label">Eliminar doenca</string>
+    <string name="confirma_eliminar_doenca">Tem a certeza que pertende eliminar doenca?</string>
+    <string name="erro_eliminar_doenca">Erro ao eliminar Tipo de doenca</string>
+    <string name="doenca_eliminado_sucesso">tipo de doenca eliminado com sucesso</string>
+    <string name="eliminar_doentes_label">Eliminar doente</string>
+    <string name="confirma_eliminar_doente">Tem a certeza que pertende eliminar o doente?</string>
+    <string name="erro_eliminar_doente">Erro ao eliminar doente</string>
+    <string name="doente_eliminado_sucesso">doente eliminado com sucesso</string>
+    <string name="eliminar_especialidade_label">Eliminar especialidade</string>
+    <string name="confirma_eliminar_especialidade">Tem a certeza que pertende eliminar especialidade?</string>
+    <string name="erro_eliminar_especialidade">Erro ao eliminar Tipo de especialidade</string>
+    <string name="especialidade_eliminado_sucesso">tipo de especialidade eliminado com sucesso</string>
+    <string name="eliminar_medico_label">Eliminar medico</string>
+    <string name="confirma_eliminar_medico">Tem a certeza que pertende eliminar o medico?</string>
+    <string name="erro_eliminar_medico">Erro ao eliminar medico</string>
+    <string name="medico_eliminado_sucesso">medico eliminado com sucesso</string>
+    <string name="alterar_data_label">Alterar Data</string>
+    <string name="inserir_doencas_label">Inserir doencas</string>
+    <string name="alterar_doencas_label">Alterar doncas</string>
+    <string name="inserir_doentes_label">Inserir doentes</string>
+    <string name="alterar_doentes_label">Alterar doentes</string>
+    <string name="inserir_especialidades_label">Inserir especialidades</string>
+    <string name="alterar_especialidades_label">Alterar especialidades</string>
+    <string name="inserir_medicos_label">Inserir medicos</string>
+    <string name="alterar_medicos_label">Alterar medicos</string>
 </resources>
